chore : QABACKLOG-1650 : add possibility to switch between browser

--- a/.github/workflows/reusable-integration-tests.yml
+++ b/.github/workflows/reusable-integration-tests.yml
@@ -32,6 +32,10 @@ on:
         required: false
         type: string
         default: ""
+      cypress_browser:
+        required: false
+        type: string
+        default: "chrome"
       module_branch:
         required: false
         type: string
