--- a/.github/workflows/reusable-on-code-change.yml
+++ b/.github/workflows/reusable-on-code-change.yml
@@ -74,6 +74,12 @@ on:
         should_skip_pagerduty:
             type: boolean
             default: false
+        primary_release_branch:
+            type: string
+            default: "master"
+        module_branch:
+            required: true
+            type: string
         
 
 jobs:
@@ -81,6 +87,8 @@ jobs:
       runs-on: ${{ inputs.static_analysis_instance_type }}
       steps:
         - uses: actions/checkout@v4
+          with:
+            ref: ${{ inputs.module_branch }}
         - uses: jahia/jahia-modules-action/static-analysis@v2
           with:
             node_version: ${{ inputs.node_version }}
@@ -97,6 +105,8 @@ jobs:
                 password: ${{ secrets.DOCKERHUB_PASSWORD }}
         steps:
             - uses: actions/checkout@v4
+              with:
+                ref: ${{ inputs.module_branch }}
             - uses: jahia/jahia-modules-action/build@v2
               with:
                 mvn_settings_filepath: ${{ inputs.mvn_settings_filepath }}
@@ -108,9 +118,11 @@ jobs:
         needs: build
         steps:
             - uses: actions/checkout@v4
+              with:
+                ref: ${{ inputs.module_branch }}
             - uses: jahia/jahia-modules-action/sonar-analysis@v2
               with:
-                primary_release_branch: ${{ github.head_ref }}
+                primary_release_branch: ${{ inputs.primary_release_branch }}
                 github_pr_id: ${{github.event.number}}
                 sonar_url: ${{ secrets.SONAR_URL }}
                 sonar_token: ${{ secrets.SONAR_TOKEN }}
@@ -129,7 +141,7 @@ jobs:
             provisioning_manifest: ${{ inputs.provisioning_manifest }}
             should_use_build_artifacts: ${{ inputs.should_use_build_artifacts }}
             artifact_prefix: standalone-${{ inputs.artifact_prefix }}
-            module_branch: ${{ github.head_ref }}
+            module_branch: ${{ inputs.module_branch }}
             timeout_job: ${{ inputs.timeout_tests }}
             timeout_step: ${{ inputs.timeout_tests_step }}
             tests_profile: ${{ inputs.tests_profile }}
@@ -152,7 +164,7 @@ jobs:
             provisioning_manifest: ${{ inputs.provisioning_manifest }}
             should_use_build_artifacts: ${{ inputs.should_use_build_artifacts }}
             artifact_prefix: cluster-${{ inputs.artifact_prefix }}
-            module_branch: ${{ github.head_ref }}
+            module_branch: ${{ inputs.module_branch }}
             timeout_job: ${{ inputs.timeout_tests }}
             timeout_step: ${{ inputs.timeout_tests_step }}
             tests_profile: ${{ inputs.tests_profile }}
