ci!: Use "main" as default branch for int tests

--- a/.github/workflows/reusable-integration-tests.yml
+++ b/.github/workflows/reusable-integration-tests.yml
@@ -35,7 +35,7 @@ on:
       module_branch:
         required: false
         type: string
-        default: "master"
+        default: "main"
       provisioning_manifest:
         required: true
         type: string
