--- a/.github/workflows/reusable-sonar-scan.yml
+++ b/.github/workflows/reusable-sonar-scan.yml
@@ -69,11 +69,6 @@ jobs:
           mvn_settings_filepath: ${{ inputs.mvn_settings_filepath }}
           nexus_username: ${{ secrets.NEXUS_USERNAME }}
           nexus_password: ${{ secrets.NEXUS_PASSWORD }}
-      - name: Set default values
-        id: vars
-        run: |
-          echo "GitHub repo slug: ${{ github.repository }}"
-          echo "github_repo=${{ github.repository }}" >> $GITHUB_OUTPUT
       - uses: jahia/jahia-modules-action/sonar-analysis@v2
         with:
           primary_release_branch: ${{ inputs.git_branch }}
@@ -85,7 +80,7 @@ jobs:
           mvn_settings_filepath: ${{ inputs.mvn_settings_filepath }}
           nexus_username: ${{ secrets.NEXUS_USERNAME }}
           nexus_password: ${{ secrets.NEXUS_PASSWORD }}
-          github_slug: ${{ inputs.github_slug || steps.vars.outputs.github_repo }}
+          github_slug: ${{ inputs.github_slug }}
       - id: status
         name: Prepare the status message for pagerduty
         if: always()
