--- a/upload-artifact/action.yml
+++ b/upload-artifact/action.yml
@@ -35,23 +35,18 @@ runs:
       if: ${{ inputs.destination == 'jahia' }}
       run: |
         if [ "${{ inputs.retention-days }}" == "unlimited" ]; then
+          echo "Unlimited retention selected, the artifact will not be automatically deleted"
           DST_PATH=$(echo $GITHUB_REPOSITORY|sed 's#/#_#g')_${{ inputs.name }}/
-          DST_FILEPATH=/temp-artifacts/${DST_PATH}
-          DST_URL=https://qa.jahia.com/artifacts-ci/${DST_PATH}
-          echo "Will be uploading artifact to: ${DST_FILEPATH}"
-          echo "Artifacts will be available at: ${DST_URL}"
-          echo "RSYNC_FOLDER=${DST_FILEPATH}" >> $GITHUB_ENV
-          echo "DOWNLOAD_URL=${DST_URL}" >> $GITHUB_ENV
         else
           DST_EXPIRY=$(date -d "+${{ inputs.retention-days }} days" +%Y-%m-%d)
           DST_PATH=delete-on-${DST_EXPIRY}_$(echo $GITHUB_REPOSITORY|sed 's#/#_#g')_${GITHUB_RUN_ID}_${GITHUB_RUN_ATTEMPT}/
+        fi
           DST_FILEPATH=/temp-artifacts/${DST_PATH}
           DST_URL=https://qa.jahia.com/artifacts-ci/${DST_PATH}
           echo "Will be uploading artifact to: ${DST_FILEPATH}"
           echo "Artifacts will be available at: ${DST_URL}"
           echo "RSYNC_FOLDER=${DST_FILEPATH}" >> $GITHUB_ENV
-          echo "DOWNLOAD_URL=${DST_URL}" >> $GITHUB_ENV
-        fi       
+          echo "DOWNLOAD_URL=${DST_URL}" >> $GITHUB_ENV      
 
     - uses: webfactory/ssh-agent@v0.7.0
       if: ${{ inputs.destination == 'jahia' }}
