chore: added curl version to ease debugging of the release action

--- a/release/action.yml
+++ b/release/action.yml
@@ -240,6 +240,7 @@ runs:
       shell: bash
       run: |
         echo "Update github release for id ${{ inputs.release_id }}"
+        curl --version
         curl -X PATCH \
         -H "Accept:application/vnd.github.v3+json" \
         -d "{\"tag_name\":\"${{ inputs.release_version }}\", \"prerelease\": false, \"draft\": false}" -u \
