--- a/ssh-port-forward/action.yml
+++ b/ssh-port-forward/action.yml
@@ -54,6 +54,9 @@ runs:
         waitScriptPath="${{ github.action_path }}"
         if [[ "${{ inputs.run-in-container }}" -eq "true" ]]; then
           waitScriptPath="/__w/_actions/jahia/jahia-modules-action/ssh-port-forward/ssh-port-forward"
+          echo "The action is running inside a container, path configured to: ${waitScriptPath}"
+          echo "Folder content:"
+          ls -lah ${waitScriptPath}
         fi
 
         for i in {1..10}; do
